Bug 1180525.  Run callbacks whose window is no longer current as long as its document is the active document in the browsing context.  r=bholley

The distinction only matters when document.open() makes a different
window current without changing the active document.