dom/bindings/CallbackObject.cpp
@@ -91,14 +91,13 @@ CallbackObject::CallSetup::CallSetup(CallbackObject* aCallback,
       nsGlobalWindow* win =
         aIsJSImplementedWebIDL ? nullptr : xpc::WindowGlobalOrNull(realCallback);
       if (win) {
-        // Make sure that if this is a window it's the current inner, since the
-        // nsIScriptContext and hence JSContext are associated with the outer
-        // window.  Which means that if someone holds on to a function from a
-        // now-unloaded document we'd have the new document as the script entry
-        // point...
+        // Make sure that if this is a window it has an active document, since
+        // the nsIScriptContext and hence JSContext are associated with the
+        // outer window.  Which means that if someone holds on to a function
+        // from a now-unloaded document we'd have the new document as the
+        // script entry point...
         MOZ_ASSERT(win->IsInnerWindow());
-        nsPIDOMWindow* outer = win->GetOuterWindow();
-        if (!outer || win != outer->GetCurrentInnerWindow()) {
+        if (!win->HasActiveDocument()) {
           // Just bail out from here
           return;
         }
